@@ -3,7 +3,7 @@
 
 <modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
 	<id>el:prettyurls</id>
-	<version>0.8.2</version>
+	<version>0.8.4</version>
 
 	<file name="$boarddir/index.php">
 		<operation>
@@ -213,11 +213,11 @@ function ob_sessrewrite($buffer)
 
 				//	Cache these URLs in the database
 				if (count($cache_data) != 0)
-					$smcFunc['db_insert']('',
+					$smcFunc['db_insert']('replace',
 						'{db_prefix}pretty_urls_cache',
 						array('url_id' => 'string', 'replacement' => 'string'),
 						$cache_data,
-						array());
+						array('url_id'));
 			}
 
 			//	Put the URLs back into the buffer
